tests/machine/x/swift/cast_struct.swift
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
struct Todo: Equatable {
    var title: String
}
let todo = Todo(title: "hi")
print((todo["title"] as! String))
